--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Barbearia Alura</title>
 </head>
 <body>
+<img id="banner" src="banner.jpg">
+<div class="principal">
+    <h1>sobre a barbearia alura</h1>
+    <p>localizada no coracao da cidade a <strong>barbearia
+       alura</strong>
+       traz para o mercado o que ha de melhor para seu cabelo e barba
+       fundada em 2019, a barbearia alura ja e destaque na cidade e
+       conquista novos clientes a cada dia.<p>
+
+    <p id="missao"><em>em nossa missao e: <strong>"proporcionar
+       auto-stima e qualidade de vida aos clientes"</strong>.</em></p>
+
+    <P>oferecemos profissionais experientes e antenados as mudancas no
+        mundo da moda. o atendimento possui padrao de excelencia 
+        agilidade, garantindo qualidade e satisfacao dos nossos cliente
+
     <header>aqui vai um banner</header>
     <h1>sobre a barbearia alura</h1>
     <p>localizada no centro da cidade,a barbearia alura traz para o mercado o que e melhor para seu cabelo e barba.fundada em 2019, a barbearia ja e a destaque na cidade e conquista novos clientes a cada dia.</p>
